	PR c/60915 	* c-parser.c (c_parser_declaration_or_fndef): Give better error if 	function-definition has an attribute after the declarator.

* gcc.dg/pr60915.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@209975 138bc75d-0d04-0410-961f-82ee72b054a4